# python_dbt_streamlit

./: .gitignore  .user.yml  README.md  antes_rodar_dbt.txt  pyproject.toml  requirements.txt
airflow/dags/: ingestao_cliente.py  ola.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/bronze/: bronze_tb_cliente.sql
dbt/models/ouro/: ouro_tb_cliente.sql
dbt/models/prata/: prata_tb_cliente.sql
dbt/seeds/: cliente.csv
docker/: docker-compose.yml
docker/airflow/dags/: ingestao_cliente.py
ingestion/: generate_csv.py  main.py
ingestion/data/: cliente.csv
web/: app.py
